Add main title and main image

--- a/index.html
+++ b/index.html
@@ -25,5 +25,24 @@
     <button>LOG IN</button>
 </div>
 </div>
+<div class="container">
+    <main>
+     <div class="main-title">
+            <h1>
+             Space Ripples Reveal <br> Big Bang’s Smoking Gun  
+            </h1>
+        </div>
+        <div class="title-image">
+            <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-jumbo.jpg?quality=90&auto=webp" alt="">
+        </div>
+        <div class="image-description">
+            <p>
+                Alan Guth was one of the first physicists to hypothesize the existence of inflation, 
+                which explains how the universe expanded so uniformly and so quickly in 
+                the instant after the Big Bang 13.8 billion years ago.<small> Rick Friedman for The New York Times</small> 
+              </p>
+        </div>
+    </main>
+</div>
 </body>
 </html>
