--- a/index.html
+++ b/index.html
@@ -42,6 +42,70 @@
                 the instant after the Big Bang 13.8 billion years ago.<small> Rick Friedman for The New York Times</small> 
               </p>
         </div>
+        <div class="main-text">
+            <div class="article-header">
+                <p>
+                     By <a href="#">Dennis Overbye</a><br><br>
+                     March 17, 2014
+                    </p>   
+                <div class="main-buttons">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fas fa-envelope"></i>
+                    <i class="fas fa-share"></i>
+                    <i class="far fa-bookmark"></i>
+                    <i class="far fa-comment"></i>
+                </div>
+            </div>
+            <p>
+                CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
+
+                He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. <br> Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant. <br>
+
+                If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
+
+                “SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
+            </p>
+            <p>
+                On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.
+
+                Reaching back across 13.8 billion years to the first sliver of cosmic time with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.
+            </p>
+            <aside>
+                    <div>
+                        <h2>
+                            Editor's picks
+                        </h2>
+                    </div>
+                <div class="aside-grid">
+                    <div class="box1">
+                        <img>
+                       <a href="#">Emojis Meet Hieroglyphs: If King Tut Could Text
+                    </a>
+                    </div>
+                    <div class="box2">
+                        <img>
+                        <a href="#">A Guide Dog for Nightmares</a>
+                    </div>
+                    <div class="box3">
+                        <img>
+                        <a href="#">How ‘West Side Story’ Was Reborn</a>
+                    </div>
+                    <div class="box4">
+                        <img>
+                        <a href="#">Behind the Scenes of the “Beyond Watchmaking” Show in Tokyo</a>
+                    </div>
+                    </div>
+                </div>
+            </aside>
+            <p>
+                Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.
+
+                If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.
+
+                Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.
+            </p>
+        </div>
     </main>
 </div>
 </body>
