--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                  </p>
                  <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&auto=webp" alt="satellite">
                  <p class="article-image-description">
-                    The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity <br> 
-                    patterns — the signature of a universe being wrenched violently apart at its birth. <br>
+                    The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity 
+                    patterns — the signature of a universe being wrenched violently apart at its birth. 
                     <small>Steffen Richter/Associated Press</small> 
                  </p> <br>
                  <p>
@@ -261,12 +261,58 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                     “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”  
                  </p> 
                  <p class="article-reference">
-                  <small>
-                    A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline:Space Ripples Reveal Big Bang’s Smoking Gun. <a href="#">Order Reprints</a>|<a href="">Today's Paper</a>|<a href="#">Subscribe</a> 
-                  </small>
+                    A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline:Space Ripples Reveal Big Bang’s Smoking Gun. <a href="#">Order Reprints</a>|<a href="#">Today's Paper</a>|<a href="#">Subscribe</a> 
                  </p>
               </div>
-
+                            <!-- article-4 end -->
+              <div class="bottom-nav">
+                  <button>READ COMMENTS</button>
+                    <div class="bottom-nav-icons">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-share"></i>
+                    </div>
+                </div>
+                        <!-- Bottom grid -->
+                <div class="bottom-grid">
+                   <div class="grid-item-header">
+                            <a href="#">More in Space and Astronomy</a>
+                        </div>
+                    <div class="bottom-grid-main">
+                        <!-- <div class="grid-item1"> -->
+                            <img src="https://static01.nyt.com/images/2019/12/05/science/       00SCI-COSMICSOLITUDE1/     merlin_163970811_4f28e288-483c-4c8d-a25c-7283c74e3e09-threeByTwoSmallAt2X.jpg?     quality=75&auto=webp&disable=upscale" alt="grid-img1">
+                        </div>
+                        <div class="grid-item2">
+                            <img src="https://static01.nyt.com/images/2020/01/19/science/19spaceflight/     merlin_167378574_dcbfdc7e-943d-45f0-8867-449db5e141d6-threeByTwoSmallAt2X.jpg?     quality=75&auto=webp&disable=upscale" alt="grid-img2">
+                        </div>
+                        <div class="grid-item3">
+                            <img src="https://static01.nyt.com/images/2020/01/14/science/11SCI-VERA1/       11SCI-VERA1-threeByTwoSmallAt2X-v2.jpg?quality=75&auto=webp&disable=upscale"       alt="grid-img3">
+                        </div>
+                        <div class="grid-item4">
+                            <img src="https://static01.nyt.com/images/2020/01/08/us/    betelgeuse-supernova-fading-promo-1578514311515/   betelgeuse-supernova-fading-promo-1578514311515-threeByTwoSmallAt2X-v4.jpg?   quality=75&auto=webp&disable=upscale" alt="grid-img4">
+                        </div>
+                        <div class="grid-item5">
+                            <img src="https://static01.nyt.com/images/2020/01/09/science/09TB-VENUS1/       09TB-VENUS1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale"      alt="grid-img5">
+                        </div>
+                        <div class="grid-item6">
+                            <img src="https://static01.nyt.com/images/2020/01/01/science/01SPACEPREVIEW1/       01SPACEPREVIEW1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale"      alt="grid-img6">
+                        </div>
+                    </div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                   <div class="grid-item"></div>
+                </div>
             </div>
             </div>
         <!-- </div> ???-->
