finished bottom grid main section

--- a/index.html
+++ b/index.html
@@ -276,27 +276,44 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                 </div>
                         <!-- Bottom grid -->
                 <div class="bottom-grid">
-                   <div class="grid-item-header">
-                            <a href="#">More in Space and Astronomy</a>
-                        </div>
+                   
                     <div class="bottom-grid-main">
-                        <!-- <div class="grid-item1"> -->
-                            <img src="https://static01.nyt.com/images/2019/12/05/science/       00SCI-COSMICSOLITUDE1/     merlin_163970811_4f28e288-483c-4c8d-a25c-7283c74e3e09-threeByTwoSmallAt2X.jpg?     quality=75&auto=webp&disable=upscale" alt="grid-img1">
+                        <h3 class="grid-item-header">
+                            <a href="#">More in Space and Astronomy</a>
+                        </h3>
+                        <div class="grid-item1">   
+                            <img src="images/footer-img1" alt="grid-img1">
+                            <a href="#">Alone on a Mountaintop, Awaiting a Very Hard Rain</a>
+                           <p>Jan. 21</p>
                         </div>
                         <div class="grid-item2">
-                            <img src="https://static01.nyt.com/images/2020/01/19/science/19spaceflight/     merlin_167378574_dcbfdc7e-943d-45f0-8867-449db5e141d6-threeByTwoSmallAt2X.jpg?     quality=75&auto=webp&disable=upscale" alt="grid-img2">
+                            <img src="images/footer-img23.jpg" alt="grid-img2">
+                            <figcaption>Joe Rimkus Jr/Reuters</figcaption>
+                            <a href="#">SpaceX’s Explosive Test May Launch Year of Renewed Human Spaceflight</a>
+                            <p>Jan. 19</p>
                         </div>
                         <div class="grid-item3">
-                            <img src="https://static01.nyt.com/images/2020/01/14/science/11SCI-VERA1/       11SCI-VERA1-threeByTwoSmallAt2X-v2.jpg?quality=75&auto=webp&disable=upscale"       alt="grid-img3">
+                            <img src="images/footer-image3.jpg" alt="grid-img3">
+                            <figcaption>Via Carnegie institution of Washington</figcaption>
+                            <a href="#">Vera Rubin Gets a Telescope of Her Own</a>
+                            <p>Jan. 7</p>
                         </div>
                         <div class="grid-item4">
-                            <img src="https://static01.nyt.com/images/2020/01/08/us/    betelgeuse-supernova-fading-promo-1578514311515/   betelgeuse-supernova-fading-promo-1578514311515-threeByTwoSmallAt2X-v4.jpg?   quality=75&auto=webp&disable=upscale" alt="grid-img4">
+                            <img src="images/footer-image4" alt="grid-img4">
+                            <a href="#">Waiting for Betelgeuse to Explode</a>
+                            <p>Jan. 5</p>
                         </div>
                         <div class="grid-item5">
-                            <img src="https://static01.nyt.com/images/2020/01/09/science/09TB-VENUS1/       09TB-VENUS1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale"      alt="grid-img5">
+                            <img src="images/footer-image5.jpg" alt="grid-img5">
+                            <figcaption>Mattias Mallmer</figcaption>
+                            <a href="#">Volcanoes on Venus Might Still Be Smoking</a>
+                            <p>Jan. 4</p>
                         </div>
                         <div class="grid-item6">
-                            <img src="https://static01.nyt.com/images/2020/01/01/science/01SPACEPREVIEW1/       01SPACEPREVIEW1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale"      alt="grid-img6">
+                            <img src="images/footer-image6.jpg" alt="grid-img6">
+                            <figcaption>Dmitry Levetsky</figcaption>
+                            <a href="#">Rocket Launches, Trips to Mars and More 2020 Space and Astronomy Events</a>
+                            <p>Jan. 14</p>
                         </div>
                     </div>
                    <div class="grid-item"></div>
@@ -315,7 +332,6 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                 </div>
             </div>
             </div>
-        <!-- </div> ???-->
     </main>
 </div>
 </body>
