--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                         <a href="#">Kobe Bryant Dies in a Helicopter Crash: Live Updates</a>
                         <a href="#">Trump Tied Ukraine Aid to Inquiries He Sought, Bolton Book Says</a>
                         <a href="#">Kobe Bryant, Transformational Star of the N.B.A., Dies in Helicopter Crash</a>
-                        <a href="#">5 Takeaways on Trump and Ukraine From John Bolton’s BookKobe Bryant Dies in a Helicopter Crash: Live Updates</a>
+                        <a href="#">5 Takeaways on Trump and Ukraine From John Bolton’s Book</a>
                         <a href="#">Mapping Potholes by Phone (the West Bank’s Roads Were Smoother)</a>
                         <a href="#">Tape Made Public of Trump Discussing Ukraine With Donors</a>
                         <a href="#">Harry and Meghan’s Big Funding Source Is Private. Sort of.</a>
@@ -330,22 +330,117 @@ Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expect
                         <a href="#">Schiff, Calling Trump ‘Wrathful and Vindictive,’ Sees Tweet as a Threat</a>
                         <a href="#">How John Mulaney, Comedian, Spends His Sundays</a>
                    </div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
-                   <div class="grid-item"></div>
+                   <!-- Bottom grid -->
+                   <div class="bottom-grid-bottom">
+                       <h3>Editor's picks</h3>
+                        <div class="grid-item">
+                            <img src="images/bottom-grid-img1" alt="bott-img1">
+                            <figcaption>Sara Naomi Lewkowicz for The New York Times</figcaption>                   
+                            <a href="#">How John Mulaney, Comedian, Spends His Sundays</a>
+                            <p>Jan. 23</p>
+                        </div>
+                        <div class="grid-item">
+                            <img src="images/bottom-grid-img2.jpg" alt="bott-img2">
+                            <figcaption>NBC</figcaption>
+                            <a href="#">‘Saturday Night Live’ Spoofs Trump’s Impeachment Trial</a>
+                            <p>Jan 12.</p>
+                        </div>
+                        <div class="grid-item">
+                            <img src="images/bottom-grid-img3.jpg" alt="bott-img3">
+                            <figcaption>Photo Illustration by Tony Cenicola/The New York Times</figcaption>
+                            <a href="#">I Quit Sex for 12 Years</a>
+                            <p>Jan 14.</p>
+                        </div>
+                   </div>
+                   <!-- last grid  -->
+                          <div class="last-grid">
+                                <img src="images/header-logo.png" alt="header-logo"> 
+                                    <div class="column1">
+                                        <a class="last-grid-links" href="#">home page</a>
+                                        <a class="last-grid-links" href="#">World</a>
+                                        <a class="last-grid-links" href="#">U.S.</a>
+                                        <a class="last-grid-links" href="#">Politics</a>
+                                        <a class="last-grid-links" href="#">Election 2020</a>
+                                        <a class="last-grid-links" href="#">New York</a>
+                                        <a class="last-grid-links" href="#">Bussiness</a>
+                                        <a class="last-grid-links" href="#">Tech</a>
+                                        <a class="last-grid-links" href="#">Science</a>
+                                        <a class="last-grid-links" href="#">Sports</a>
+                                        <a class="last-grid-links" href="#">Obituaries</a>
+                                        <a class="last-grid-links" href="#">Today's paper</a>
+                                        <a class="last-grid-links" href="#">Corrections</a>
+                                </div>
+                                <div class="column2">
+                                    <a class="last-grid-links" href="#">today's arts</a>
+                                    <a class="last-grid-links" href="#">art & design</a>
+                                    <a class="last-grid-links" href="#">books</a>
+                                    <a class="last-grid-links" href="#">dance</a>
+                                    <a class="last-grid-links" href="#">movies</a>
+                                    <a class="last-grid-links" href="#">music</a>
+                                    <a class="last-grid-links" href="#">Pop Culture</a>
+                                    <a class="last-grid-links" href="#">television</a>
+                                    <a class="last-grid-links" href="#">theater</a>
+                                    <a class="last-grid-links" href="#">video: arts</a>
+                                </div>
+                                <div class="column3">
+                                    <a class="last-grid-links" href="#">today's opinion</a>
+                                    <a class="last-grid-links" href="#">op-ed columnists</a>
+                                    <a class="last-grid-links" href="#">editorials</a>
+                                    <a class="last-grid-links" href="#">op-ed Contributors</a>
+                                    <a class="last-grid-links" href="#">letters</a>
+                                    <a class="last-grid-links" href="#">sunday review</a>
+                                    <a class="last-grid-links" href="#">video: opinion</a>
+                                </div>
+                                <div class="column4">
+                                    <a class="last-grid-links" href="#">automobiles</a>
+                                    <a class="last-grid-links" href="#">crossword</a>
+                                    <a class="last-grid-links" href="#">education</a>
+                                    <a class="last-grid-links" href="#">food</a>
+                                    <a class="last-grid-links" href="#">health</a>
+                                    <a class="last-grid-links" href="#">jobs</a>
+                                    <a class="last-grid-links" href="#">magazine</a>
+                                    <a class="last-grid-links" href="#">parenting</a>
+                                    <a class="last-grid-links" href="#">real estate</a>
+                                    <a class="last-grid-links" href="#">style</a>
+                                    <a class="last-grid-links" href="#">magazine</a>
+                                    <a class="last-grid-links" href="#">travel</a>
+                                    <a class="last-grid-links" href="#">love</a>
+                                </div>
+                                <div class="column5">
+                                    <a class="last-grid-links" href="#">Reader Center</a>
+                                    <a class="last-grid-links" href="#">Wirecutter</a>
+                                    <a class="last-grid-links" href="#">Live Events</a>
+                                    <a class="last-grid-links" href="#">The Learning Network</a>
+                                    <a class="last-grid-links" href="#">tools & services</a>
+                                    <a class="last-grid-links" href="#">N.Y.C. events guide</a>
+                                    <a class="last-grid-links" href="#">multimedia</a>
+                                    <a class="last-grid-links" href="#">photography</a>
+                                    <a class="last-grid-links" href="#">video</a>
+                                    <a class="last-grid-links" href="#">Newsletters</a>
+                                    <a class="last-grid-links" href="#">NYT store</a>
+                                    <a class="last-grid-links" href="#">times journeys</a>
+                                    <a class="last-grid-links" href="#">manage my account</a>
+                                </div>
+                                <div class="column6">
+                                    <a class="last-grid-links" href="#">home delivery</a>
+                                    <a class="last-grid-links" href="#">digital subscriptions</a>
+                                    <a class="last-grid-links" href="#">Crossword</a>
+                                    <a class="last-grid-links" href="#">Cooking</a>
+                                    <a class="last-grid-links" href="#">email newsletters</a>
+                                    <a class="last-grid-links" href="#">corporate subscriptions</a>
+                                    <a class="last-grid-links" href="#">education rate</a>
+                                    <a class="last-grid-links" href="#">mobile applications</a>
+                                    <a class="last-grid-links" href="#">replica edition</a>
+                                    <a class="last-grid-links" href="#">Español</a>
+                                    <a class="last-grid-links" href="#">中文</a>
+                                </div>
+                            </div>
+                            </div>
+                    </div>
                 </div>
             </div>
-            </div>
     </main>
+           
 </div>
 </body>
 </html>
